[package]
name = "mnk-vmf"
version = "0.1.0"
edition = "2024"
description = "A library for parsing Valve Map Format (VMF) files."
homepage = "https://github.com/TheMenko/mnk-vmf"
repository = "https://github.com/TheMenko/mnk-vmf"
license = "MIT or Apache-2.0"

[[bench]]
harness = false
name = "full_vmf"

[[bench]]
harness = false
name = "versioninfo"

[[bench]]
name = "color"
harness = false

[[bench]]
name = "visgroups"
harness = false

[[bench]]
name = "viewsettings"
harness = false

[[bench]]
name = "side"
harness = false

[[bench]]
name = "camera"
harness = false

[[bench]]
name = "displacement"
harness = false

[[bench]]
name = "cordon"
harness = false

[[bench]]
name = "editor"
harness = false

[[bench]]
name = "entity"
harness = false

[[bench]]
name = "solid"
harness = false

[[bench]]
name = "world"
harness = false

[dependencies]
chumsky = "0.10"
logos = "0.15"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
